--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body, html {
   width:100%;
-  background-color: #f7f7f7 !important;
+  background-color: #f7f7f7 /*!important*/;
 }
 *, *:after, *:before {
 box-sizing: border-box;
@@ -16,25 +16,27 @@ transition: .5s ease-in-out;
   background-image: url("../img/header3.jpg");
   min-height: 200px;
   margin-top: 0;
+  margin-bottom: 0;
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100%;
 }
 .signIn{
-  width: 60%;
+  
   height: 20%;
   position: absolute;
-  margin: 2% 20%;
+  
   margin-top: 2%;
   font-family: 'Lato', Calibri, Arial, sans-serif;
   color: black;
   text-shadow: 0 1px 2px rgba(0,0,0,0.3);
+  margin: 2% 75%;width: 20%;
 }
-.signIn p{
+/*.signIn p{
   width: 100%;
   border-radius: 5px;
   border: 1px solid #fff;
-}
+}*/
 .signIn input[type=text],
 .signIn input[type=password] {
     width: 100%;
@@ -45,16 +47,15 @@ transition: .5s ease-in-out;
     font-family: Arial, sans-serif;
     color: #BDB76B;
     text-shadow: 0 1px 2px rgba(0,0,0,0.3);
-    font-size: 20px;      
+    font-size: 20px;
+    border-radius: 5px;
+    border: 1px solid #fff;  
 }
 .signIn button{
     width: 100%;
     height: 33px;
     float: left;
     margin-top: 5%;
-}
-
-button{
     box-shadow: inset 0 1px rgba(255,255,255,0.3);
     border-radius: 3px;
     margin-right: 1%;
@@ -69,6 +70,24 @@ button{
     text-decoration: none;
 }
 
+button{
+  text-decoration: none;
+  outline: none;
+  display: inline-block;
+  width: 170px;
+  height: 45px;
+  line-height: 45px;
+  margin: 10px 20px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
+  text-align: center;
+  letter-spacing: 1px;
+  font-weight: 600;
+  color: #524f4e;
+  background: rgba(0,0,0,0.2);
+  box-shadow: 0 8px 15px rgba(0,0,0,.1);
+} 
+
 
 
 /*Стили для верхней навигации*/
@@ -77,17 +96,18 @@ ul {
 }
 .logo{
   float: center;
+  
   margin-right: 5%
 }
 
 .logo img{
-  width: 45px;
-  margin-top: 20px;
-  margin-left: 45%;
+  
+  width: 45px;margin-top: 20px;margin-left: 50px;
 }
 
 .navbar li a {
-  float: center;
+  float:center;
+  
   display: block;
   color: #f2f2f2;
   text-align: center;
@@ -111,12 +131,11 @@ ul {
 
 /*Стили для фоток-основного контента*/
 .content{
-  width: 70%;
-  margin-left: 16.5%;
+  
+  margin-left: 70px;border: 30px; max-width: 65%; float: left;
+  margin-top: 2%;
 }
 .content img{
-  width: 100%;
-  height: 100%;
   overflow: hidden;
   display:inline-block;
   border: 15px solid rgb(255, 228, 225, 0.4);
@@ -124,13 +143,44 @@ ul {
   margin: 12px;
   margin-left: 0%;
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  max-width: 28%;
 }
 
+p{
+  width: 70%;
+  margin-top:2%;
+}
 
 /*Боковая панель навигации*/
+#burger-menu{
+  color: #fff;
+  background-color: #0058B9;
+  padding:3px 8px 8px 8px;
+  top: 5px;
+  left: 5px;
+  width: 35px;
+}
+#burger-menu span{
+
+  display: block;
+  height: 3px;
+  background-color: #000;
+  margin: 5px 0 0;
+  transition: all .1s linear .23s;
+  position: relative;
+}
+#sidebar{
+  display:none;
+}
+#sidebar.open{
+  display:block;
+}
 aside {
-  width: 100%;
-  float: none;
+  
+  width: 27%;
+  float: left; 
+  /*margin-left: 2%; */
+  margin-top: 2%
 }
 .widget {
   padding: 20px 15px;
@@ -138,6 +188,7 @@ aside {
   font-size: 13px;
   margin-bottom: 30px;
   box-shadow: 3px 3px 1px rgba(0,0,0,.05);
+  background-color: #f7f7f7;
 }
 .widget h3{
   font-size: 25px;
@@ -150,8 +201,8 @@ aside {
 .widget-list{
   margin-bottom: 0px;
   list-style: none;
-  font-size: 20px;
-  text-align: center;
+  font-size: 15px;
+  text-align: left;
   
 }
 .widget-list li{
@@ -166,10 +217,13 @@ aside {
   margin-bottom: 15px;
 }
 
-
+.widget-list button{
+  margin-bottom: 20px;
+}
 
 /*Подвал*/
 footer {
+  clear:both;
 padding: 25px 0;
 width: 100%;
 background: rgb(160, 82, 45,0.5);
@@ -195,18 +249,17 @@ text-align: right;
 
 
 
-/* Для больших устройств*/
-@media (min-width: 769px) {
-
-  .checkIn{margin-bottom: 0;}
- .content img {max-width: 28%; margin:12px;}
- .content{margin-left: 30px;border: 30px; max-width: 65%; float: left; }
- .navbar a {float:left;}
- .signIn a{color:white;}
-  .logo{float: left;}
-  .logo img{width: 45px;margin-top: 20px;margin-left: 50px;}
-  aside {width: 27%;float: right;}
-  .signIn{margin: 2% 75%;width: 20%;}
-  .widget-category-list{text-align: left;}
-  footer{clear:both;}
+/* Для маленьких устройств*/
+@media (max-width: 769px) {
+ .content img {width: 100%;}
+ .content{width: 70%; margin-left: 16.5%; }
+ .navbar a {float: center;}
+  .logo{float: center;}
+  .logo img{width: 45px; margin-top: 20px;margin-left: 45%;}
+  aside {width: 100%;float: none;}
+  .signIn{margin: 2% 20%;width: 60%;}
 }
+
+
+
+
