--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ transition: .5s ease-in-out;
   border-radius: 5px;
   border: 1px solid #fff;
 }*/
-.signIn input[type=text],
+.signIn input[type=email],
 .signIn input[type=password] {
     width: 100%;
     height: 50px;
@@ -52,8 +52,9 @@ transition: .5s ease-in-out;
     border: 1px solid #fff;  
 }
 .signIn button{
-    width: 100%;
-    height: 33px;
+    /*width: 100%;
+    height: 33px;*/
+    width: 110px;
     float: left;
     margin-top: 5%;
     box-shadow: inset 0 1px rgba(255,255,255,0.3);
@@ -169,18 +170,18 @@ p{
   transition: all .1s linear .23s;
   position: relative;
 }
-#sidebar{
+/*#sidebar{
   display:none;
 }
-#sidebar.open{
+/*#sidebar.open{
   display:block;
-}
+}*/
 aside {
   
   width: 27%;
   float: left; 
   /*margin-left: 2%; */
-  margin-top: 2%
+  margin-top: 4%
 }
 .widget {
   padding: 20px 15px;
